# DCS-API

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: release.yml
API/: Dockerfile  dcsapi.cfg  main.py
Module/: Cargo.toml  build.rs  dcsapi.cfg  lua51.def
Module/.cargo/: config.toml
Module/lua/: dcsapi.lua  dcsapi_export.lua
Module/lua_lib/: lua.lib
Module/src/: lib.rs
